--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,8 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
+  demands:
+    - npm
 
 variables:
   buildConfiguration: 'Release'
@@ -15,7 +17,32 @@ variables:
 
 
 steps:
-- task: CmdLine@2
-  displayName: "current build step testing"
+
+- task: Npm@1
   inputs:
-    script: 'dotnet build --configuration $(buildConfiguration)'
+    command: 'install'
+- task: CmdLine@2
+  displayName: "Run node modules node-sass"
+  inputs:
+    script: '''./node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'''
+- task: gulp@0
+  inputs:
+    gulpFile: 'gulpfile.js'
+
+    targets: 
+    gulpjs: 'node_modules/gulp/bin/gulp.js'
+    enableCodeCoverage: false
+
+- task: CmdLine@2
+  inputs:
+    script: 'echo $(Build.BuildId),$(Build.DefinitionName	),$(Build.BuildNumber)> "buildinfo.txt"'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    projects: '**/*.csproj'
+    feedsToUse: 'select'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    projects: '**/*.csproj'
+    arguments: '--no-restore --configuration Release'
