Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ steps:
     script: |
       pwd
       ls -ltr
+      ls -ltr ./node_modules
+      ls -ltr ./node_modules/.bin
 - task: CmdLine@2
   displayName: "Run node modules node-sass"
   inputs:
