Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,8 @@ steps:
       ls -ltr
       ls -ltr ./node_modules
       ls -ltr ./node_modules/.bin
+      ls -ltr ./node_modules/.bin/node-sass
+      ls -ltr Tailspin.SpaceGame.Web/wwwroot
 - task: CmdLine@2
   displayName: "Run node modules node-sass"
   inputs:
