--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,3 +54,8 @@ steps:
     command: 'build'
     projects: '**/*.csproj'
     arguments: '--no-restore --configuration Release'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
