--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,12 @@ steps:
     command: 'build'
     projects: '**/*.csproj'
     arguments: '--no-restore --configuration Release'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
