--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,13 @@ steps:
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
+  displayName: "Test"
+  inputs:
+    command: 'test'
+    projects: '**/*.Tests.csproj'
+    arguments: '--no-restore --configuration $(buildConfiguration)'
+    testRunTitle: 'bals_test'
+- task: DotNetCoreCLI@2
   displayName: 'Publish the project - $(buildConfiguration)'
   inputs:
     command: 'publish'
@@ -53,12 +60,6 @@ steps:
     publishWebProjects: false
     arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
     zipAfterPublish: true
-- task: DotNetCoreCLI@2
-  displayName: "Test"
-  inputs:
-    command: 'test'
-    arguments: '**/*.Tests.csproj'
-    testRunTitle: 'bals_test'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
